cod-tools (unreleased)

  * Fixed:
    - capitalization of 'ASCII' (was 'ascii') in error/warning messages.

cod-tools (2.7)

  * Added:
    - COD::SUsage:
      - several error messages informing about non-zero exit status
        while opening or closing files.
    - cif2cod:
      - the --no-reformat-space-group option as a synonym for
        the --leave-space-group option.
    - cif2rdf:
      - the --no-reformat-space-group option as a synonym for
        the --leave-space-group option.
    - COD::CIF::Tags::COD:
      - all data names that were introduced in DDL1 'cif_cod.dic' dictionary
        version 0.040.
  * Changed:
    - cif_distances:
      - slightly reworded the help message.
    - cif_list_tags
      - updated the layout of the help message.
    - cifparse:
      - updated the layout of the help message.
    - cifvalues:
      - updated the layout of the help message.
    - cif2cod:
      - hard coded the default values of some of the options instead of
        depending on the default values of the COD::CIF::Data::CIF2COD::cif2cod()
        subroutine.
    - cif2rdf:
      - hard coded the default values of some of the options instead of
        depending on the default values of the COD::CIF::Data::CIF2COD::cif2cod()
        subroutine.
    - help2man:
      - updated the script to no longer generate the OPTIONS section
        with the placeholder text if the actual options are not described;
      - updated the script to print program names in man pages using upper case;
      - updated the script to mark all generated man pages as belonging to
        manual section 1.
  * Fixed:
    - updated the USAGE section of multiple scripts to follow the syntax
      that is properly handled by the 'help2man' script;
    - codcif:
      - updated the parser to detect and report forbidden vertical
        tabulation (VT) and form feed (FF) control characters;
      - updated the parser to report CIF data names consisting of a single
        underscore;