@@ -1,5 +1,9 @@
 cod-tools (unreleased)
 
+  * Changed:
+     - codcif:
+       - unified the reaction to forbidden CIF v1.1 and v2.0 symbols
+         across the lexers of different CIF versions.
   * Fixed:
     - capitalization of 'ASCII' (was 'ascii') in error/warning messages.
 
